--- a/package.json
+++ b/package.json
@@ -2,12 +2,32 @@
   "name": "yadeto",
   "version": "0.0.0",
   "description": "Yade.to in memory of the passed lives...",
+  "author": "mhmdamin.jafari@gmail.com",
+  "license": "Apache-2.0",
+  "private": true,
   "directories": {
     "doc": "docs"
   },
   "scripts": {
-    "throw": "echo \"[ERROR] Throw Yaaaay\" && exit 1"
+    "dev:front": "next dev ./frontend/yadeto",
+    "build:front": "next build ./frontend/yadeto",
+    "start:front": "next start ./frontend/yadeto",
+    "lint:front": "next lint"
   },
-  "author": "mhmdamin.jafari@gmail.com",
-  "license": "Apache-2.0"
+  "dependencies": {
+    "next": "14.2.4",
+    "react": "^18",
+    "react-dom": "^18"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5"
+  }
 }
