--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev:front": "next dev ./frontend/yadeto",
     "build:front": "next build ./frontend/yadeto",
     "start:front": "next start ./frontend/yadeto",
-    "lint:front": "next lint"
+    "lint:front": "next lint",
+    "test:front": "jest --passWithNoTests"
   },
   "dependencies": {
     "next": "14.2.4",
@@ -21,6 +22,8 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -34,8 +37,10 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "prettier": "^2.6.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.38",
+    "prettier": "^2.6.2",
     "tailwindcss": "^3.4.4",
     "ts-node": "^10",
     "typescript": "^5"
